--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ height:750px; width:1400px; left:-170px; top:-70px;}
 <div id="everything">
 
 
-<body oncontextmenu="return false" style="background-image:url(bg.png); background-repeat: no-repeat; background-size: cover; background-color:#f1e7e5; font-family:'04b03'; font-size:8px; color:#998a82; overflow:hidden;">
+<body oncontextmenu="return false" style="background-image:url(bg.png); background-repeat: no-repeat; background-size: cover; background-color:#f1e7e5; font-family:'04b03'; font-size:8px; color:#998a82;">
 
 
 <img ondragstart="return false" style="position:absolute; left:120px; top:70px; z-index:0;" src="details.png">
@@ -158,7 +158,7 @@ crediting me is not necessary, but appreciated <font style="font-family: verdana
 </div>
 
 
-<div style="position:absolute; left:150px; top:570px; z-index:12; padding: 5px; color: #756e6e; text-shadow: 1px 1px #fff; width: 450px; height: 220px; font-family: 'Pixel-Maz'; font-size: 20px; text-align: left; letter-spacing:1px; color:#b09b97; line-height: 15px;">
+<div style="position:absolute; left:150px; top:570px; z-index:12; padding: 5px; color: #756e6e; text-shadow: 1px 1px #fff; width: 450px; height: 100px; font-family: 'Pixel-Maz'; font-size: 20px; text-align: left; letter-spacing:1px; color:#b09b97; line-height: 15px;">
 please feel free to make your actual website layout using this base project by changing images, arranging the codes, then uploading your final project anywhere you like !
 </div>
 
