--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ height:750px; width:1400px; left:-170px; top:-70px;}
 <div id="everything">
 
 
-<body oncontextmenu="return false" style="background-image:url(bg.png); background-repeat: no-repeat; background-size: cover; background-color:#f1e7e5; font-family:'04b03'; font-size:8px; color:#998a82;">
+<body oncontextmenu="return false" style="background-image:url(bg.png); background-repeat: no-repeat; background-size: cover; background-attachment: fixed;  background-color:#f1e7e5; font-family:'04b03'; font-size:8px; color:#998a82;">
 
 
 <img ondragstart="return false" style="position:absolute; left:120px; top:70px; z-index:0;" src="details.png">
