--- a/404.html
+++ b/404.html
@@ -26,6 +26,10 @@
 
 <title>bαse codes for you ♡</title>
 
+<script language= "JavaScript">
+location.href="https://base.pooftie.me"
+</script>
+
 <head>
 <link rel="shortcut icon" href="./project/img/favicon.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
