--- a/project/404.html
+++ b/project/404.html
@@ -27,6 +27,15 @@
 <!--   ・゜ ♡   keep reading these comments for understanding the codes !
                   a detailed tutorial with examples will appear further down   ♡ ゜ ・   -->
 
+<!--   ・゜ ♡   this ⤵ is an optional code that will redirect the person to your main url again, since this is a 404 "page not found" error page that would lead to nowhere   ♡ ゜ ・   -->
+
+<script language= "JavaScript">
+location.href="https://base.pooftie.me"
+</script>
+
+<!--   ・゜ ♡   。・　゜ ♡   。・゜ ♡   ゜・。。 ♡　。・゜ ♡ ・  。・゜ ♡   ・゜ ♡ ゜・。 ・ ♡ °  .   -->
+
+
 <!--   ・゜ ♡   these ⤵ are meta tags. this info may appear when your website is linked somewhere   ♡ ゜ ・   -->
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/> <!--  site encoding ◝꒰ ´ ˘ `  -->
@@ -770,9 +779,7 @@ stuff here
 <br><br><br><br>
 <div style="position:absolute; right:20%; left:20%;">
 <center>
-macaroon topping cake lollipop candy canes. chocolate cake i love soufflé jelly candy dessert soufflé powder.<br><br>
-fruitcake donut candy canes cotton candy liquorice.<br><br>
-chocolate bar i love fruitcake shortbread <font style="color:#d1b1b0;">♡</font>
+error 404, page not found !!
 </center>
 </div>
 
