--- a/project/index.html
+++ b/project/index.html
@@ -36,33 +36,78 @@
 <meta property="og:title" content="♡">
 <meta property="twitter:title" content="♡">
 
+<meta property="og:site_name" content="base.pooftie.me">  <!--  site name ◝꒰ ´ ˘ `  -->
+
 <meta name="description" content="bαse codes for you"> <!--  site description ◝꒰ ´ ˘ `  -->
 <meta property="og:description" content="bαse codes for you">
 <meta property="twitter:description" content="bαse codes for you">
 
 <meta name="theme-color" content="#f7e9ed"> <!--  site main color ◝꒰ ´ ˘ `  -->
 
-<meta property="og:url" content="https://base.pooftie.me"> <!--  site url ◝꒰ ´ ˘ `  -->
+<meta name="url" content="https://base.pooftie.me"> <!--  site url ◝꒰ ´ ˘ `  -->
+<meta name="identifier-URL" content="https://base.pooftie.me">
+<meta property="og:url" content="https://base.pooftie.me">
 <meta property="twitter:url" content="https://base.pooftie.me">
 
-<meta property="og:image" content="https://middlepot.com/img/arrangement.jpg"> <!--  site preview image ◝꒰ ´ ˘ `  -->
-<meta property="og:image:type" content="image/jpeg">
-<meta property="twitter:image" content="https://middlepot.com/img/arrangement.jpg">
+<meta property="og:image:type" content="image/jpeg"> <!--  site banner / preview image ◝꒰ ´ ˘ `  -->
+<meta property="og:image" content="https://middlepot.com/img/arrangement.jpg">
 <meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:image" content="https://middlepot.com/img/arrangement.jpg">
+
+<meta name="creation_date" content="july 29, 2022"> <!--  site creation date ◝꒰ ´ ˘ `  -->
+
+<meta name="author" content="middlepot, letters@middlepot.com"> <!--  site owner name + email ◝꒰ ´ ˘ `  -->
+<meta name="designer" content="middlepot, letters@middlepot.com">
+<meta name="owner" content="middlepot, letters@middlepot.com">
+
+<meta name="copyright" content="poofties © middlepot"> <!--  site copyright ◝꒰ ´ ˘ `  -->
+
+<meta name="template" content="https://base.pooftie.me"> <!--  site base template link ◝꒰ ´ ˘ `  -->
+
+
+<!--   ・゜ ♡   these ⤵ are basically the same meta tags, but in a modern script format   ♡ ゜ ・   -->
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage", /* detailed info about the website / page ◝꒰ ´ ˘ ` */
+  "name": "base.pooftie.me",
+  "alternateName": "♡",
+  "description": "bαse codes for you",
+  "url": "https://base.pooftie.me",
+  "isPartOf": "https://pooftie.me", /* main domain url, if there is one ◝꒰ ´ ˘ ` */
+  "image": "https://middlepot.com/img/arrangement.jpg",
+  "dateCreated": "2022-07-29",
+  "copyrightNotice": "poofties © middlepot", /* copyright signature, if there is one ◝꒰ ´ ˘ ` */
+  "creator": {
+            "@type": "Person", /* detailed info about the site owner ◝꒰ ´ ˘ ` */
+            "name": "middlepot",
+            "email": "letters@middlepot.com",
+            "url": "https://middlepot.com",
+            "image": "https://middlepot.com/img/melissa.jpg",
+            "birthDate": "1997-08-11",
+            "jobTitle": "artist, crafter & designer",
+            "brand": {
+                  "@type": "Brand", /* detailed info about the owner brand, if there is one ◝꒰ ´ ˘ ` */
+                  "name": "poofties™",
+                  "alternateName": "poofties.club",
+                  "url": "https://poofties.club",
+                  "logo": "https://poofties.club/img/logo.jpg"
+                  }
+         }
+}
+</script>
 
 <!--   ・゜ ♡   。・　゜ ♡   。・゜ ♡   ゜・。。 ♡　。・゜ ♡ ・  。・゜ ♡   ・゜ ♡ ゜・。 ・ ♡ °  .   -->
 
 
 
-<!--   ・゜ ♡   this ⤵ is the title of your site   ♡ ゜ ・   -->
+<!--   ・゜ ♡   this ⤵ is the title of your site, it appears at the browser's tab   ♡ ゜ ・   -->
 <title>
 ♡
 </title>
-<!--   ・゜ ♡   。・　゜ ♡   。・゜ ♡   ゜・。。 ♡　。・゜ ♡ ・  。・゜ ♡   ・゜ ♡ ゜・。 ・ ♡ °  .   -->
 
-
-
-<!--   ・゜ ♡   this ⤵ is the favicon code, you may modify it   ♡ ゜ ・   -->
+<!--   ・゜ ♡   this ⤵ is the favicon code, it appears right next to the title   ♡ ゜ ・   -->
 
 <link rel="shortcut icon" href="./img/favicon.png">
 
@@ -167,6 +212,11 @@ zoom: 100%; /* this viewport usually doesn't require zoom ◝꒰ ´ ˘ ` */
 <!--   ・゜ ♡   my emoji set code, for changing default emoji images   ♡ ゜ ・  -->
 <script src="https://file.pooftie.me/js/jquery.js"></script>
 <script src="https://middlepot.com/emoji.js"></script>
+<!--   © middlepot.com  ꒰ ू´ ˘ ` ू ꒱  -->
+
+<!--   ・゜ ♡   my color set code, for applying custom color patterns to texts !
+       learn how to use at : https://color.pooftie.me   ♡ ゜ ・  -->
+<script src="https://middlepot.com/color.js"></script>
 <!--   © middlepot.com  ꒰ ू´ ˘ ` ू ꒱  -->
 
 
@@ -396,10 +446,12 @@ z-index: 1;
 　✄ - - -　code for customized text :
 
 
-´ ˘ ` ꒱੭　　you can go to any "color hex picker" website and pick neat colors for your text !
-　　　　they look like this #d6c7c3 and you can pick any. when a style code has more than one attribute
+´ ˘ ` ꒱੭　　to change text color you can either use color names, or hex codes !
+       there are many "color hex picker" websites where you can search for neat colors.
+　　　　hex codes look like this #d6c7c3 and you can pick any. when a style code has more than one attribute
 　　　　please be careful to keep them separate by ; or they won't work !
 
+       learn to apply my custom color patterns at : https://color.pooftie.me　◝꒰ ´ ˘ `♡
 
 　　✄ - - basic example text code :
 
