--- a/project/404.html
+++ b/project/404.html
@@ -87,7 +87,7 @@ location.href="https://base.pooftie.me"
   "isPartOf": "https://pooftie.me", /* main domain url, if there is one ◝꒰ ´ ˘ ` */
   "image": "https://middlepot.com/img/arrangement.jpg",
   "dateCreated": "2022-07-29",
-  "copyrightNotice": "poofties © middlepot", /* copyright signature, if there is one ◝꒰ ´ ˘ ` */
+  "copyrightNotice": "poofties © middlepot", /* copyright signature ◝꒰ ´ ˘ ` */
   "creator": {
             "@type": "Person", /* detailed info about the site owner ◝꒰ ´ ˘ ` */
             "name": "middlepot",
