--- a/project/index.html
+++ b/project/index.html
@@ -78,7 +78,7 @@
   "isPartOf": "https://pooftie.me", /* main domain url, if there is one ◝꒰ ´ ˘ ` */
   "image": "https://middlepot.com/img/arrangement.jpg",
   "dateCreated": "2022-07-29",
-  "copyrightNotice": "poofties © middlepot", /* copyright signature, if there is one ◝꒰ ´ ˘ ` */
+  "copyrightNotice": "poofties © middlepot", /* copyright signature ◝꒰ ´ ˘ ` */
   "creator": {
             "@type": "Person", /* detailed info about the site owner ◝꒰ ´ ˘ ` */
             "name": "middlepot",
