--- a/project/404.html
+++ b/project/404.html
@@ -104,6 +104,9 @@ location.href="https://base.pooftie.me"
                   "logo": "https://poofties.club/img/logo.jpg"
                   }
          }
+ /*    note : you don't need to add any personal information if you're not comfortable !
+        this is simply a tool for search engines to be able to link multiple websites to you,
+        and recommend your other works. this can be useful, but it's completely optional.    */
 }
 </script>
 
