--- a/index.html
+++ b/index.html
@@ -29,11 +29,21 @@
 <head>
 <link rel="shortcut icon" href="./project/img/favicon.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta name="robots" content="nosnippet">
+<meta name="robots" content="max-snippet:0">
+<meta name="robots" content="noarchive">
+<meta name="robots" content="notranslate">
+<meta name="robots" content="nositelinkssearchbox">
+<meta name="robots" content="max-video-preview:0">
+<meta name="robots" content="max-image-preview:standard">
 <meta name="title" content="♡">
 <meta name="description" content="bαse codes for you">
 <meta name="theme-color" content="#f7e9eb">
 <meta name="url" content="https://base.pooftie.me">
 <meta name="identifier-URL" content="https://base.pooftie.me">
+<meta name="thumbnail" content="https://middlepot.com/img/arrangement.jpg">
+<img src="https://middlepot.com/img/arrangement.jpg"
+alt="base.pooftie.me banner thumbnail preview main image" style="display:none">
 <meta property="og:url" content="https://base.pooftie.me">
 <meta property="og:title" content="♡">
 <meta property="og:site_name" content="base.pooftie.me">
