--- a/project/404.html
+++ b/project/404.html
@@ -40,6 +40,13 @@ location.href="https://base.pooftie.me"
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/> <!--  site encoding ◝꒰ ´ ˘ `  -->
 <meta property="og:type" content="website">
+<meta name="robots" content="nosnippet">
+<meta name="robots" content="max-snippet:0">
+<meta name="robots" content="noarchive">
+<meta name="robots" content="notranslate">
+<meta name="robots" content="nositelinkssearchbox">
+<meta name="robots" content="max-video-preview:0">
+<meta name="robots" content="max-image-preview:standard">
 
 <meta name="title" content="♡"> <!--  site title ◝꒰ ´ ˘ `  -->
 <meta property="og:title" content="♡">
@@ -62,6 +69,9 @@ location.href="https://base.pooftie.me"
 <meta property="og:image" content="https://middlepot.com/img/arrangement.jpg">
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:image" content="https://middlepot.com/img/arrangement.jpg">
+<meta name="thumbnail" content="https://middlepot.com/img/arrangement.jpg">
+<img src="https://middlepot.com/img/arrangement.jpg"
+alt="base.pooftie.me banner thumbnail preview main image" style="display:none">
 
 <meta name="creation_date" content="july 29, 2022"> <!--  site creation date ◝꒰ ´ ˘ `  -->
 
