--- a/404.html
+++ b/404.html
@@ -46,8 +46,6 @@ location.href="https://base.pooftie.me"
 <meta name="url" content="https://base.pooftie.me">
 <meta name="identifier-URL" content="https://base.pooftie.me">
 <meta name="thumbnail" content="https://middlepot.com/img/arrangement.jpg">
-<img src="https://middlepot.com/img/arrangement.jpg"
-alt="base.pooftie.me banner thumbnail preview main image" style="display:none">
 <meta property="og:url" content="https://base.pooftie.me">
 <meta property="og:title" content="♡">
 <meta property="og:site_name" content="base.pooftie.me">
@@ -205,7 +203,7 @@ height:750px; width:1400px; left:-170px; top:-70px;}
 <div id="everything">
 
 
-<body oncontextmenu="return false" style="background-image:url(bg.png); background-repeat: no-repeat; background-size: cover; background-attachment: fixed;  background-color:#f1e7e5; font-family:'04b03'; font-size:8px; color:#998a82;">
+<body oncontextmenu="return false" style="background-image:url(bg.png); background-repeat: no-repeat; background-size: cover; background-attachment: fixed;  background-color:#f1e7e5; font-family:'04b03'; font-size:8px; color:#998a82;"><img src="https://middlepot.com/img/arrangement.jpg" alt="base.pooftie.me banner thumbnail preview main image" style="display:none">
 
 
 <img ondragstart="return false" style="position:absolute; left:120px; top:70px; z-index:0;" src="details.png">
