--- a/project/404.html
+++ b/project/404.html
@@ -70,8 +70,6 @@ location.href="https://base.pooftie.me"
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:image" content="https://middlepot.com/img/arrangement.jpg">
 <meta name="thumbnail" content="https://middlepot.com/img/arrangement.jpg">
-<img src="https://middlepot.com/img/arrangement.jpg"
-alt="base.pooftie.me banner thumbnail preview main image" style="display:none">
 
 <meta name="creation_date" content="july 29, 2022"> <!--  site creation date ◝꒰ ´ ˘ `  -->
 
@@ -265,6 +263,14 @@ you can change. if using a standard system font you don't need to install a font
 
 background-color: #fffaf9; font-family: verdana; font-size: 10px; color: #a6938f;">
 
+
+<!--   ・゜ ♡   this ⤵ is the site's banner image. it's invisible, but search engines can find it
+   and understand that this is an important image that should be the used as preview.
+   please change the image source link as well as the alt description url, accordingly   ♡ ゜ ・   -->
+
+<img src="https://middlepot.com/img/arrangement.jpg" alt="base.pooftie.me banner thumbnail preview main image" style="display:none">
+
+<!--   ・゜ ♡   。・　゜ ♡   。・゜ ♡   ゜・。。 ♡　。・゜ ♡ ・  。・゜ ♡   ・゜ ♡ ゜・。 ・ ♡ °  .   -->
 
 <style>
 /* ・゜ ♡  this ⤵ is how you install a .otf font file to your site  ♡ ゜ ・ */
