--- a/404.html
+++ b/404.html
@@ -1,7 +1,6 @@
 <html>
 
 <!--
-
 　　　          ___   .--.
 　　　    .--.-"   "-' .- |
 　　　   / .-,`          .'   
@@ -11,17 +10,16 @@
 　　　      \ 。            /.____　　　　　　　　　　　　　　　　　　♡.  
 　　　     /`-.          ,'.'    `\　　　　　　　　　　　　　　　　　　。・゜　　　 ♡ ・ 。　　。・゜ ♡  
 　　　  __/   \`-.____.-' `\      /　　　　　♡　。・゜      
-　　　  | `---`'-'._/-`     \----'    _ 　　　　　　　　　　　♡　　　.　　　.♡ 
+　　　  | `---`'-'._/-`     \----'    _ 　　　　　　　　　　　 ♡　　　.　　　.♡ 
 　　　  |,-'`  /             |    _.-' `\　　　　. * ・        
 　　　 .'     /              |--'`     / |　　　　　　　　　　 ♡
 　　　/      /\              `         | |
-　　　|   .\/  \      .--. __          \ |　　　　　　　　　　　*.。middlepot.com 
-　　　 '-'      '._       /  `\         /　　　　　　　　　　　　　　　　　　　　　　　ଘ(*´ ˘ `*)ഒ 。.*
-　　　             `\    '     |------'`
+　　　|   .\/  \      .--. __          \ |　　　　　© middlepot.com  ꒰ ू´ ˘ ` ू ꒱
+　　　 '-'      '._       /  `\         /
+　　　             `\    '     |------'`　　　　。・゜　　　 ♡ ・ 。　　。・゜ ♡  
 　　　               \  |      |
-　　　                \        /
+　　　                \        /　　　　　 ♡　　　.　　　.♡              . * ・  ♡
  　　　                '._  _.'
-
 -->
 
 <title>bαse codes for you ♡</title>
@@ -248,7 +246,6 @@ please feel free to make your actual website layout using this base project by c
 </body>
 
 <!--
-
 　　　          ___   .--.
 　　　    .--.-"   "-' .- |
 　　　   / .-,`          .'   
@@ -258,17 +255,16 @@ please feel free to make your actual website layout using this base project by c
 　　　      \ 。            /.____　　　　　　　　　　　　　　　　　　♡.  
 　　　     /`-.          ,'.'    `\　　　　　　　　　　　　　　　　　　。・゜　　　 ♡ ・ 。　　。・゜ ♡  
 　　　  __/   \`-.____.-' `\      /　　　　　♡　。・゜      
-　　　  | `---`'-'._/-`     \----'    _ 　　　　　　　　　　　♡　　　.　　　.♡ 
+　　　  | `---`'-'._/-`     \----'    _ 　　　　　　　　　　　 ♡　　　.　　　.♡ 
 　　　  |,-'`  /             |    _.-' `\　　　　. * ・        
 　　　 .'     /              |--'`     / |　　　　　　　　　　 ♡
 　　　/      /\              `         | |
-　　　|   .\/  \      .--. __          \ |　　　　　　　　　　　*.。middlepot.com 
-　　　 '-'      '._       /  `\         /　　　　　　　　　　　　　　　　　　　　　　　ଘ(*´ ˘ `*)ഒ 。.*
-　　　             `\    '     |------'`
+　　　|   .\/  \      .--. __          \ |　　　　　© middlepot.com  ꒰ ू´ ˘ ` ू ꒱
+　　　 '-'      '._       /  `\         /
+　　　             `\    '     |------'`　　　　。・゜　　　 ♡ ・ 。　　。・゜ ♡  
 　　　               \  |      |
-　　　                \        /
+　　　                \        /　　　　　 ♡　　　.　　　.♡              . * ・  ♡
  　　　                '._  _.'
-
 -->
 
 </html>
