--- a/project/index.html
+++ b/project/index.html
@@ -791,7 +791,7 @@ stuff here
 <br>
 <!--   ・゜ ♡   example text ⤵   ♡ ゜ ・ -->
 <pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-cupcake ipsum dolor sit amet cookie i love marzipan. marshmallow sweet chocolate powder shortbread chocolate bar. cupcake brownie danish candy cake pastry lemon drops <font style="color:#c79e9d;">♡</font>
+creampuff ipsum dolor sit amet cookie i love marzipan. marshmallow sweet chocolate powder shortbread chocolate bar. cupcake brownie danish candy cake pastry lemon drops <font style="color:#c79e9d;">♡</font>
 cake liquorice fruitcake cheesecake toffee. jujubes gingerbread toffee tootsie roll sweet cheesecake biscuit topping sweet.
 </pre>
 </div>
@@ -803,7 +803,7 @@ cake liquorice fruitcake cheesecake toffee. jujubes gingerbread toffee tootsie r
 border-style: solid; border-width: 20px; border-color: rgba(255, 255, 255, 0.01);
 border-image: url(./img/laceborder.png) 30 round;">
 <font style="color:#b08f8b; text-shadow: 1px 1px #fcfcfc;">
-<font style="color:#d1b1b0;">꒰</font> cupcake ipsum dolor sit amet gingerbread oat cake. cookie sweet roll lollipop liquorice chocolate bar i love soufflé pie. jujubes marzipan i love pastry sesame snaps jelly gingerbread. bear claw chocolate bar jelly cake bonbon apple pie <font style="color:#d1b1b0;">꒱</font><br><br>
+<font style="color:#d1b1b0;">꒰</font> creampuff ipsum dolor sit amet gingerbread oat cake. cookie sweet roll lollipop liquorice chocolate bar i love soufflé pie. jujubes marzipan i love pastry sesame snaps jelly gingerbread. bear claw chocolate bar jelly cake bonbon apple pie <font style="color:#d1b1b0;">꒱</font><br><br>
 brownie lemon drops cake biscuit fruitcake bonbon jelly beans pastry. bonbon sugar plum halvah cupcake macaroon. toffee croissant marshmallow pudding tiramisu sweet roll. sweet roll chupa chups toffee i love cake toffee lollipop sweet roll pastry <font style="color:#c79e9d;">♡</font><br><br>
 apple pie chupa chups tart liquorice candy canes lemon drops marzipan macaroon powder. cake sweet roll tart gummies cookie sweet roll toffee cotton candy. apple pie bonbon icing cotton candy i love !<br><br>
 donut dessert dessert danish chupa chups sweet muffin croissant. lemon drops sesame snaps i love marshmallow croissant tiramisu jelly cheesecake lollipop. wafer halvah i love bonbon sweet roll wafer ice cream gummies. candy canes tart gummies pie tootsie roll i love muffin halvah sesame snaps.<br><br>
