--- a/project/about.html
+++ b/project/about.html
@@ -788,7 +788,7 @@ stuff here
 <div style="position:absolute; right:20%; left:20%;">
 <center>
 macaroon topping cake lollipop candy canes. chocolate cake i love soufflé jelly candy dessert soufflé powder.<br><br>
-fruitcake donut candy canes cotton candy liquorice.<br><br>
+creampuff donut candy canes cotton candy liquorice.<br><br>
 chocolate bar i love fruitcake shortbread <font style="color:#d1b1b0;">♡</font>
 </center>
 </div>
