--- a/404.html
+++ b/404.html
@@ -143,7 +143,7 @@ html {
 height:700px; width:1200px; left:-70px; top:-30px;}
 
 @supports not (-webkit-touch-callout: none) {
-@media screen and (max-width: 1000px) and (orientation: portrait){
+@media screen and (min-width: 1px) and (orientation: portrait){
 #everything { position: absolute; zoom: 140%;
 	left:680px;
 	top:-40px;
@@ -156,7 +156,7 @@ height:700px; width:1200px; left:-70px; top:-30px;}
 height:500px; width:790px; left:125px; top:60px;}
 }}
 @supports (-webkit-touch-callout: none) {
-@media screen and (max-width: 1000px) and (orientation: portrait){
+@media screen and (min-width: 1px) and (orientation: portrait){
 #everything { position: absolute; zoom: 140%;
 	left:680px;
 	top:-40px;
@@ -179,8 +179,8 @@ body { background-size: 70%; }
 height:520px; width:900px; left:80px; top:50px;}
 }
 @media screen and (min-width: 2000px) and (orientation: landscape){
-#everything { position: absolute; zoom: 100%;}
-#frame { -webkit-transform: scale(0.6); transform: scale(0.6);
+#everything { position: absolute; zoom: 170%;}
+#frame { -webkit-transform: scale(0.9); transform: scale(0.9);
 height:700px; width:1150px; left:-100px; top:-30px;}
 }
 @media screen and (min-width: 3000px) and (orientation: landscape){
