--- a/project/404.html
+++ b/project/404.html
@@ -56,7 +56,7 @@ location.href="https://base.pooftie.me"
 <meta property="og:description" content="bαse codes for you">
 <meta property="twitter:description" content="bαse codes for you">
 
-<meta name="theme-color" content="#f7e9ed"> <!--  site main color ◝꒰ ´ ˘ `  -->
+<meta name="theme-color" content="#fefbfb"> <!--  site main color ◝꒰ ´ ˘ `  -->
 
 <meta name="url" content="https://base.pooftie.me"> <!--  site url ◝꒰ ´ ˘ `  -->
 <meta name="identifier-URL" content="https://base.pooftie.me">
