--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@ location.href="https://base.pooftie.me"
 <meta name="robots" content="max-image-preview:standard">
 <meta name="title" content="♡">
 <meta name="description" content="bαse codes for you">
-<meta name="theme-color" content="#f7e9eb">
+<meta name="theme-color" content="#fefbfb">
 <meta name="url" content="https://base.pooftie.me">
 <meta name="identifier-URL" content="https://base.pooftie.me">
 <meta name="thumbnail" content="https://middlepot.com/img/arrangement.jpg">
